--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     password: ${db_password}
     username: ${db_username}
-    url: jdbc:mysql://localhost:3306/testTestTest?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/FitnessDB?createDatabaseIfNotExist=true
     logging:
   level:
     org:
