--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     password: ${db_password}
     username: ${db_username}
-    url: jdbc:mysql://localhost:3306/FitnessDB?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/FitnessDB?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
     logging:
   level:
     org:
@@ -30,3 +30,7 @@ spring:
     blog: WARN
 server:
   port: 8080
+
+  supplements:
+    api:
+      baseUrl: "http://localhost:8081"
